<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:background="@drawable/arc_bg_white_top_20" android:paddingTop="12dp" android:paddingBottom="12dp" android:layout_width="match_parent" android:layout_height="wrap_content">
    <Button android:id="@+id/btn_add_manager" android:visibility="gone" android:text="@string/room_live_manage_manage" style="@style/create_room_cover"/>
    <Button android:id="@+id/btn_manager_list" android:visibility="gone" android:text="@string/room_live_manage_managelist" style="@style/create_room_cover"/>
    <Button android:id="@+id/btn_mute_user" android:visibility="gone" android:text="@string/room_live_manage_gag" style="@style/create_room_cover"/>
    <Button android:id="@+id/btn_kick_user" android:visibility="gone" android:text="@string/room_live_manage_kickplayer" style="@style/create_room_cover"/>
    <Button android:id="@+id/btn_warn_user" android:visibility="gone" android:text="@string/room_live_manage_caveat" style="@style/create_room_cover"/>
    <Button android:id="@+id/btn_report_user" android:text="@string/room_live_manage_report" style="@style/create_room_cover"/>
    <Button android:id="@+id/btn_cancel" android:text="@string/room_live_manage_cancel" style="@style/create_room_cover"/>
</LinearLayout>
