<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:gravity="center_horizontal" android:orientation="vertical" android:background="@drawable/shape_add_member_diglog_bg" android:layout_width="300dp" android:layout_height="250dp">
    <TextView android:text="@string/dialog_add_member_title" style="@style/dialog_title"/>
    <FrameLayout android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1">
        <EditText android:textSize="14sp" android:gravity="center" android:layout_gravity="center" android:id="@+id/etNickName" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/dialog_add_member_et_hint" android:layout_marginStart="10dp" android:layout_marginEnd="10dp"/>
    </FrameLayout>
    <Button android:textColor="@color/md_white" android:id="@+id/btnAdd" android:background="@drawable/ripple_button_green" android:layout_width="match_parent" android:layout_height="40dp" android:layout_marginBottom="10dp" android:text="@string/activity_create_chat_add" android:layout_marginStart="10dp" android:layout_marginEnd="10dp"/>
</LinearLayout>
