<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:background="@color/white" android:layout_width="match_parent" android:layout_height="match_parent">
    <ImageButton android:id="@+id/btn_back" android:layout_width="@dimen/toolbar_height" android:layout_height="@dimen/toolbar_height" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:tint="@color/colorSecondaryText" style="@style/ToolBarBackButton"/>
    <TextView android:id="@+id/title" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/login_screen_title" android:layout_marginStart="44dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:layout_constraintVertical_bias="0.15" style="@style/AuthTitle"/>
    <TextView android:id="@+id/subtitle" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/auth_login_subtitle" android:layout_marginStart="44dp" app:layout_constraintBottom_toTopOf="@+id/linearLayout2" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/title" style="@style/AuthSubtitle"/>
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@+id/linearLayout2" android:visibility="visible" android:layout_width="match_parent" android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/subtitle">
        <LinearLayout android:layout_gravity="center" android:orientation="horizontal" android:background="@drawable/shape_btn_login" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="match_parent" android:layout_height="@dimen/login_field_height" android:layout_marginLeft="44dp" android:layout_marginTop="26dp" android:layout_marginRight="44dp">
            <com.hbb20.CountryCodePicker android:gravity="center_vertical" android:id="@+id/ccp" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="match_parent" android:layout_marginStart="15dp" app:ccpDialog_showTitle="false" app:ccp_autoDetectLanguage="true" app:ccp_contentColor="@color/auth_edit_hint_color" app:ccp_showNameCode="false" app:ccp_textSize="15sp"/>
            <View android:layout_gravity="center" android:background="@color/auth_edit_hint_color" android:layout_width="1dp" android:layout_height="17dp"/>
            <com.qennnsad.aknkaksd.presentation.ui.widget.OneKeyClearEditText android:theme="@style/LoginEditControl" android:textSize="16sp" android:textStyle="bold" android:textColor="@color/black" android:textColorHint="@color/auth_edit_hint_color" android:gravity="start|center_vertical" android:layout_gravity="center" android:id="@+id/edit_user_name" android:background="@null" android:paddingLeft="10dp" android:paddingRight="10dp" android:layout_width="match_parent" android:layout_height="40dp" android:hint="@string/login_name_hint" android:maxLines="1" android:singleLine="true" android:drawableRight="@drawable/ic_clear_field" android:layout_marginEnd="10dp" style="@style/LoginEdit"/>
        </LinearLayout>
        <com.google.android.material.textfield.TextInputLayout android:theme="@style/Theme.AppCompat" android:gravity="center_vertical" android:background="@drawable/shape_btn_login" android:paddingTop="0dp" android:paddingBottom="0dp" android:layout_width="match_parent" android:layout_height="48dp" android:layout_marginLeft="44dp" android:layout_marginTop="14dp" android:layout_marginRight="44dp" app:hintEnabled="false" app:passwordToggleDrawable="@drawable/ic_password_toggle" app:passwordToggleEnabled="true" app:passwordToggleTint="@color/black" style="@style/LoginEdit">
            <com.qennnsad.aknkaksd.presentation.ui.widget.OneKeyClearEditText android:textSize="14sp" android:textStyle="bold" android:textColor="@color/black" android:textColorHint="@color/auth_edit_hint_color" android:id="@+id/edit_pass" android:background="@null" android:paddingLeft="16dp" android:paddingRight="16dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/login_passwd_hint" android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>
        <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:textSize="16sp" android:textColor="@color/auth_secondary_active" android:layout_gravity="end" android:id="@+id/restore_password" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:foreground="?android:attr/selectableItemBackground" android:text="@string/auth_login_restore_password" android:layout_marginEnd="44dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintTop_toTopOf="0"/>
            <TextView android:textSize="16sp" android:textColor="@color/auth_title_color" android:layout_gravity="end" android:id="@+id/guestLogin" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:foreground="?android:attr/selectableItemBackground" android:text="@string/guest_login" android:layout_marginStart="44dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <LinearLayout android:orientation="horizontal" android:id="@+id/ll_sms_input" android:visibility="gone" android:layout_width="match_parent" android:layout_height="@dimen/login_field_height" android:layout_marginLeft="44dp" android:layout_marginTop="14dp" android:layout_marginRight="44dp">
            <com.qennnsad.aknkaksd.presentation.ui.widget.OneKeyClearEditText android:theme="@style/LoginEditControl" android:textSize="14sp" android:textStyle="bold" android:textColor="@color/black" android:textColorHint="@color/edit_hint_color" android:gravity="start|center_vertical" android:layout_gravity="center" android:id="@+id/edit_sms" android:background="@drawable/shape_btn_login" android:paddingLeft="15dp" android:layout_width="0dp" android:layout_height="48dp" android:hint="@string/register_sms" android:drawableRight="@drawable/ic_clear_field" android:layout_weight="5" android:inputType="number" style="@style/LoginEdit"/>
            <Button android:textColor="@color/black" android:layout_gravity="end|center_vertical" android:id="@+id/captcha_button" android:background="@drawable/shape_bg_getcaptche" android:layout_width="110dp" android:layout_height="48dp" android:layout_marginRight="0dp" android:text="@string/login_captcha_get" style="@style/PrimaryButton2"/>
        </LinearLayout>
        <Button android:textSize="20sp" android:textColor="@color/md_grey_200" android:gravity="center" android:layout_gravity="center" android:id="@+id/login_by_username" android:background="@drawable/bg_auth_gradient_main" android:layout_width="match_parent" android:layout_height="44dp" android:layout_marginLeft="44dp" android:layout_marginTop="16dp" android:layout_marginRight="44dp" android:text="@string/login"/>
        <Button android:textSize="20sp" android:textColor="@color/auth_title_color" android:gravity="center" android:layout_gravity="center" android:id="@+id/register" android:background="@drawable/bg_auth_gradient_secondary" android:layout_width="match_parent" android:layout_height="46dp" android:layout_marginLeft="44dp" android:layout_marginTop="16dp" android:layout_marginRight="44dp" android:text="@string/regist"/>
    </LinearLayout>
    <ImageView android:id="@+id/logo" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_auth_logo" app:layout_constraintBottom_toTopOf="@+id/contact_support" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/linearLayout2" app:layout_constraintVertical_bias="0.6"/>
    <TextView android:textSize="12sp" android:textStyle="bold" android:textColor="@color/auth_support_text" android:gravity="center" android:id="@+id/contact_support" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="40dp" android:text="@string/contact_customer_service" android:drawablePadding="5dp" app:drawableStartCompat="@drawable/ic_customer_support" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0"/>
    <ImageButton android:textStyle="bold" android:id="@+id/btn_config_show" android:background="@null" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="50dp" android:src="@drawable/im_ic_menu_normal" android:drawablePadding="5dp" android:layout_marginEnd="10dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintTop_toTopOf="0"/>
</androidx.constraintlayout.widget.ConstraintLayout>
