<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:background="@color/white" android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:textSize="@dimen/text_large" android:textColor="@color/text_settings" android:id="@+id/tvNoData" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/no_data" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:layout_constraintVertical_bias="0.35"/>
    <TextView android:textSize="@dimen/text_normal" android:textColor="@color/text_settings" android:gravity="center" android:id="@+id/tvPermission" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:text="@string/phone_permission_message" android:layout_marginStart="@dimen/activity_padding" android:layout_marginEnd="@dimen/activity_padding" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/tvNoData"/>
    <Button android:textColor="@color/white" android:id="@+id/btAppSettings" android:background="@color/imPrimary" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:text="@string/provide_permission" android:paddingStart="8dp" android:paddingEnd="8dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/tvPermission"/>
</androidx.constraintlayout.widget.ConstraintLayout>
